[bug fixes] - navbar now in front of settings panel - removed old import code and put into mapd - added highlighting animation on table - fixed small filter bug - fixed table not showing first row bug

--- a/css/dc.css
+++ b/css/dc.css
@@ -75,7 +75,7 @@ art {
 }
 
 .dc-chart thead {
-    position: absolute;
+    position: relative;
     top: 38px;
 }
 
@@ -206,6 +206,16 @@ art {
 }
 
 .dc-data-table {
+}
+
+.dc-table-column:hover{
+    -webkit-transition: all 0.2s;
+     transition: all 0.2s;
+}
+
+.dc-table-column:hover{
+    color:black;
+    font-weight:bold;
 }
 
 .dc-chart g.state {
